bakery/k8s/instana-operator-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-instana-operator
