bakery/k8s/jaeger-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: freshmart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 6831
              protocol: UDP

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: freshmart
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: collector-http
      port: 14268
      targetPort: 14268
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: agent-udp
      port: 6831
      targetPort: 6831
      protocol: UDP
