bakery/k8s/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harvestmart-frontend
  namespace: freshmart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harvestmart-frontend
  template:
    metadata:
      labels:
        app: harvestmart-frontend
    spec:
      containers:
        - name: harvestmart-frontend
          image: image-registry.openshift-image-registry.svc:5000/freshmart/harvestmart-frontend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: harvestmart-frontend-service
  namespace: freshmart
spec:
  selector:
    app: harvestmart-frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: harvestmart-frontend-route
  namespace: freshmart
spec:
  to:
    kind: Service
    name: harvestmart-frontend-service
  port:
    targetPort: 80
