bakery/k8s/grafana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: freshmart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.1.4
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: datasource-config
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: datasource-config
          configMap:
            name: grafana-datasources
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: freshmart
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-route
  namespace: freshmart
spec:
  to:
    kind: Service
    name: grafana-service
